# poc-atlas-mlr-xray

./: .gitignore  CLASSIFICATION_TO_MLR_MAP.md  CLAUDE.md  MLR_PRECHECK_API.md  README.md  dependency_rules.yaml
backend/: DECISIONS.md  README.md  pyproject.toml
backend/baselines/: uk_email_baselines.jsonl
backend/src/mlr/api_views/: document_xray.py
backend/src/mlr/fixtures/: assets.py
backend/src/mlr/ingest/: baseline_bootstrap.py  extractor_adapter.py  library_bootstrap.py  seed_baseline.py
backend/src/mlr/precheck/: abbreviation_check.py  api.py  asset_builder.py  baseline.py  claim_check.py  dependency_rules.py  document_check.py  glossary.py  library.py  schema.py  similarity.py  structural_check.py  verdict.py
backend/src/mlr/preview/: render.py
backend/tests/: conftest.py  test_abbreviation_check.py  test_api.py  test_baseline_bootstrap.py  test_claim_check.py  test_dependency_rules.py  test_document_check.py  test_extractor_adapter.py  test_glossary.py  test_library.py  test_similarity.py
design brief/design_handoff_mlr_xray/: MLR X-Ray.html  README.md  XRayEmail.jsx
frontend/: README.md  XRayData.jsx  XRayDrawer.jsx  adapter.js  index.html
frontend/legacy_mlr_precheck/: XRayDrawer.jsx
input for design/: mlr_precheck_brief.md  wireframe_1_preview_xray.html  wireframe_2_legal_tab.html  wireframe_3_all_tab.html
profiles/: Event-Promotional.yaml  IE-Branded-Promotional.yaml  Non-Branded-Disease-Awareness.yaml  README.md  UK-Branded-Promotional.yaml
